--- a/docs/main.tex
+++ b/docs/main.tex
@@ -14,6 +14,7 @@
 \usepackage{listings}
 \usepackage{caption}
 \usepackage{cleveref}
+\usepackage{icomma}
 \usepackage[ampersand]{easylist}
 
 \input{macros.tex}
