Dokończ sekcję o lalkarzu

--- a/docs/model.tex
+++ b/docs/model.tex
@@ -270,6 +270,7 @@ Ze względu na wiele ustawień elementów bazy, należy stworzyć bogaty interfe
 \end{itemize}
 
 \subsection{Rozszerzenie modelu}
+\label{sec:model_nan}
 Ponieważ komputerowa reprezentacja liczby zmiennoprzecinkowej pozwala na zapisanie nie tylko liczbowych wartości, postanowiłem rozszerzyć model o dodatkową funkcjonalność,
 wywoływaną wysłaniem do modelu cichej nie-liczby (NaN) w polu zadanej prędkości. Cicha nie-liczba powstaje w procesorze przy przeprowadzaniu 
 nieprawidłowych, acz niekrytycznych obliczeń zmiennoprzecinkowych, na przykład dzielenie przez zero, lub dzielenie nieskończoności przez minus-nieskończoność.
