--- a/docs/sensor.tex
+++ b/docs/sensor.tex
@@ -86,6 +86,7 @@ Tak, jak model platformy, ten pakiet otrzymał nazwę kodową \texttt{Monokl}.
 		Jednak takie rozwiązanie niszczy komponentową budowę środowiska i nie pozwala na użycie składowych w innych modelach.
 		
 	\subsection{Mechanika ramek}
+	\label{sec:frames}
 	Komunikacja poprzez pakiety wiadomości nie jest jedynym sposobem na przekazywanie informacji w środowisku ROS.
 	%TODO wspomnieć o tym wcześniej
 	Istnieje także mechanika ramek transformacji \texttt{TF2}.
