--- a/ros/src/lalkarz/readme
+++ b/ros/src/lalkarz/readme
@@ -1,7 +1,7 @@
 Lalkarz - Okno graficzne do sterowania robotem z klawiatury, kontrolera lub myszki
 
 Lalkarz wysyła wiadomości typu omnivelma_msgs/Vels i geometry_msgs/Twist do podanych odbiorców.
-Użyj Widelnicy, aby rodzdzielić wejście dla Omnivelmy i Pseudovelmy, jeśli jest taka konieczność.
+Użyj Widelnicy, aby rozdzielić wejście dla Omnivelmy i Pseudovelmy, jeśli jest taka konieczność.
 Użyj Transmutatora, jeśli chcesz sterować kierunkiem platform zamiast bezpośrednio prędkościami kół (wygodniejsze).
 Użyj Dziadzia, jeśli chcesz wyłuskać prędkości kół z enkoderów.
 Podłącz kontroler, aby łatwo sterować niebinarnym wejściem.
@@ -28,13 +28,13 @@ Tryby:
 10:	Kierunek sterowany kontrolerem.
 11:	Kierunek sterowany myszką.
 Podtrzymanie oznacza wysyłanie NaN do modelu, który nie modyfikuje wtedy prędkości koła.
-Platforma się tak nie zachowuje, jest to dodatkowa funcjonalność (patrz inżynierka, wzmianka o niemożliwych testach).
+Platforma się tak nie zachowuje, jest to dodatkowa funkcjonalność (patrz inżynierka, wzmianka o niemożliwych testach).
 
 Wejście:
 Przy każdym trybie zaznaczone są klawisze, którymi się steruje.
 Można użyć kontrolera XBOX, lub PS. Różnica interfejsu jest jedynie w kolejności osi i przycisków, które częściowo się pokrywają.
 Zatem nieużywane przyciski jednego kontrolera mogą mieć funkcjonalności innych przycisków drugiego kontrolera.
-SELECT:		Lewy klawisz funcyjny kontrolera.
+SELECT:		Lewy klawisz funkcyjny kontrolera.
 START:		Prawy klawisz funkcyjny kontrolera.
 LB:			Lewy przycisk od przodu kontrolera (palec wskazujący).
 RB:			Prawy przycisk od przodu kontrolera (palec wskazujący).
