--- a/docs/sensor.tex
+++ b/docs/sensor.tex
@@ -126,6 +126,7 @@ Tak, jak model platformy, ten pakiet otrzymał nazwę kodową \texttt{Monokl}.
 	\hline
 	Stały środek mapy & \texttt{map} \\
 	Środek platformy & \texttt{omnivelma} \\
+	Środek platformy kinematycznej & \texttt{pseudovelma} \\
 	Emiter prawego lasera & \texttt{monokl\_r\_heart} \\
 	Emiter lewego lasera & \texttt{monokl\_l\_heart} \\
 	\end{tabular}
@@ -139,6 +140,7 @@ Tak, jak model platformy, ten pakiet otrzymał nazwę kodową \texttt{Monokl}.
 	Nazwa & Punkt względny & Punkt danych \\
 	\hline
 	Pozycja i rotacja platformy & \texttt{map} & \texttt{omnivelma} \\
+	Pozycja i rotacja platformy kinematycznej & \texttt{map} & \texttt{pseudovelma} \\
 	Pozycja i rotacja prawego czujnika & \texttt{map} & \texttt{monokl\_r\_heart} \\
 	Pozycja i rotacja lewego czujnika & \texttt{map} & \texttt{monokl\_l\_heart} \\
 	\end{tabular}
